Fix Layout Issue, New Now Section

--- a/static/global.css
+++ b/static/global.css
@@ -38,14 +38,14 @@ html {
 }
 
 body {
-	max-width: 1440px;
+	max-width: 720px;
 	width: 100%;
 	height: 100%;
 	font-family: 'Pretendard';
 	color: var(--color-text-primary);
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: left;
 	padding: 16px;
 	margin: 0 auto;
 }
